fix: post content alignment on casper v4

--- a/public/css/comments.css
+++ b/public/css/comments.css
@@ -206,3 +206,7 @@
 	height: 20px;
 	border-radius: 100%;
 }
+
+#nodebb .post-content {
+	display: inline;
+}
